{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 511,
  "lineage": "ba875aea-0303-a440-86bd-cd80f5e11e2c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "redshift_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:158484031361:security-group/sg-01f6c9be3b4ed6e78",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-01f6c9be3b4ed6e78",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Redshift Port",
                "from_port": 5439,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5439
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "158484031361",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "redshift-dev-redshift-security-group"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "redshift-dev-redshift-security-group"
            },
            "vpc_id": "vpc-08ebcf1e7d503ab25"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.redshift-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "redshift-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:158484031361:internet-gateway/igw-0ce83bf331de1f965",
            "id": "igw-0ce83bf331de1f965",
            "owner_id": "158484031361",
            "tags": {
              "Environment": "dev",
              "Name": "kopicloud-redshift-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "kopicloud-redshift-igw"
            },
            "vpc_id": "vpc-08ebcf1e7d503ab25"
          },
          "dependencies": [
            "aws_vpc.redshift-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "redshift-rt-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:158484031361:route-table/rtb-04e1ff19526aa283a",
            "id": "rtb-04e1ff19526aa283a",
            "owner_id": "158484031361",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ce83bf331de1f965",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "kopicloud-redshift-public-route-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "kopicloud-redshift-public-route-igw"
            },
            "timeouts": null,
            "vpc_id": "vpc-08ebcf1e7d503ab25"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.redshift-igw",
            "aws_vpc.redshift-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift-subnet-rt-association-igw-az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0627648f4768475ea",
            "route_table_id": "rtb-04e1ff19526aa283a",
            "subnet_id": "subnet-022dcb21c7ae103d2"
          },
          "dependencies": [
            "aws_internet_gateway.redshift-igw",
            "aws_route_table.redshift-rt-igw",
            "aws_subnet.redshift-subnet-az1",
            "aws_vpc.redshift-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift-subnet-rt-association-igw-az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e95552a596aa028e",
            "route_table_id": "rtb-04e1ff19526aa283a",
            "subnet_id": "subnet-07db441250da3d192"
          },
          "dependencies": [
            "aws_internet_gateway.redshift-igw",
            "aws_route_table.redshift-rt-igw",
            "aws_subnet.redshift-subnet-az2",
            "aws_vpc.redshift-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "redshift-subnet-az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:158484031361:subnet/subnet-022dcb21c7ae103d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-022dcb21c7ae103d2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "158484031361",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "kopicloud-redshift-subnet-az1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "kopicloud-redshift-subnet-az1"
            },
            "vpc_id": "vpc-08ebcf1e7d503ab25"
          },
          "dependencies": [
            "aws_vpc.redshift-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "redshift-subnet-az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:158484031361:subnet/subnet-07db441250da3d192",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.20.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07db441250da3d192",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "158484031361",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "kopicloud-redshift-subnet-az2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "kopicloud-redshift-subnet-az2"
            },
            "vpc_id": "vpc-08ebcf1e7d503ab25"
          },
          "dependencies": [
            "aws_vpc.redshift-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "redshift-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:158484031361:vpc/vpc-08ebcf1e7d503ab25",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-0726476d01c39dc85",
            "default_route_table_id": "rtb-02ecca63fe51ae563",
            "default_security_group_id": "sg-01f6c9be3b4ed6e78",
            "dhcp_options_id": "dopt-01061a7939b763363",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08ebcf1e7d503ab25",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02ecca63fe51ae563",
            "owner_id": "158484031361",
            "tags": {
              "Environment": "dev",
              "Name": "kopicloud-redshift-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "kopicloud-redshift-vpc"
            }
          }
        }
      ]
    }
  ]
}